# text-to-sign-production

./: .commitlintrc.yaml  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dvc.yaml  mkdocs.yml  pyproject.toml  requirements-colab.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
configs/: storage.example.yaml
configs/data/: filter-v1.yaml  filter-v2.yaml  filters.yaml  gates.yaml  quality-tier-v1.yaml  tiers.yaml
docs/: decisions.md  development-setup.md  execution.md  experiments.md  getting-started.md  how2sign.md  index.md  repository-map.md  repository-structure.md  roadmap.md  testing.md
docs/data/: csv-schema.md  filter-policy.md  index.md  openpose-schema.md  processed-schema.md  raw-layout.md  raw-schema.md  template.md  versioning.md
docs/decisions/: adr-0001-repo-centered-workflow.md  adr-0002-notebooks-as-thin-drivers.md  adr-0003-dvc-inclusion.md  adr-0004-english-as-project-language.md  adr-0005-sprint-1-excludes-ml-implementation.md  adr-0006-sprint-2-data-first.md  adr-0007-preserve-official-how2sign-splits.md  adr-0008-manifest-driven-processed-dataset.md  adr-0009-npz-processed-sample-format.md  adr-0010-face-optional-in-v1.md  adr-0011-adopt-filter-v2-one-hand-policy-for-dataset-build.md  adr-0012-remove-dvc-active-workflow.md  adr-0013-define-post-dataset-build-research-roadmap.md  adr-0014-adopt-sprint-3-stage-oriented-baseline-workflow-and-notebook-extension.md  adr-0015-define-runtime-artifact-archive-resume-and-evidence-strategy.md  adr-0015-define-sprint-3-runtime-artifact-archive-resume-and-evidence-strategy.md  adr-0016-adopt-notebook-only-supported-workflow-and-single-execution-guide.md  adr-0017-standardize-structured-documentation-surfaces-with-index-and-template.md  adr-0018-roadmap-as-normative-sprint-contract.md  adr-0019-split-notebook-architecture-as-target-workflow.md  adr-0020-published-model-artifacts-as-downstream-interface.md  adr-0021-four-model-2x2-comparison-architecture.md  adr-0022-standard-testing-surfaces-before-contribution-implementation.md  adr-0023-phase-based-research-governance-and-public-documentation-boundaries.md  index.md  template.md
docs/execution/: baseline-modeling.md  colab-sprint2.md  dataset-build.md
docs/experiments/: 2026-04-baseline-modeling-experiment-record-colab-run-190420261845.md  2026-04-dataset-build-experiment-record-filter-v2-full-validation.md  2026-04-dataset-build-filter-v2-full-validation.md  README.md  baseline-modeling-record-guide.md  baseline-modeling-record-template.md  index.md  sprint3-baseline-record-guide.md  sprint3-baseline-record-template.md  template.md
docs/reports/: data-quality-report.md  split-report.md
docs/research/: bibliography.md  index.md  literature-positioning.md  roadmap.md  source-corpus.md  source-selection-criteria.md
docs/storage/: artifacts.md
docs/testing/: contracts.md  index.md  infrastructure.md  layers.md
notebooks/: colab_smoke_test.ipynb  samples.ipynb  text_to_sign_dataset_colab.ipynb  text_to_sign_visualization_colab.ipynb  tiers.ipynb
notebooks/colab/: dataset_build_colab.ipynb  sprint2_pipeline_colab.ipynb  text_to_sign_base_colab.ipynb  text_to_sign_dataset_colab.ipynb  text_to_sign_production_colab.ipynb  text_to_sign_visualization_colab.ipynb
notes/: LLM_PROJECT_HANDOFF.md  SPRINT3_BRIEFING.md
scripts/: baseline_modeling.py  dataset_build.py  evaluate_baseline.py  export_qualitative_panel.py  export_training_manifest.py  filter_samples.py  normalize_keypoints.py  package_sprint2_outputs.py  prepare_raw.py  publish_colab_outputs.py  stage_colab_inputs.py  train_baseline.py  validate_manifest.py  view_sample.py
src/text_to_sign_production/: __init__.py  smoke.py
tests/: conftest.py  test_colab_operations.py  test_data_pipeline.py  test_smoke.py  test_workflow_architecture_contracts.py
tests/e2e/: test_baseline_modeling_workflow.py  test_dataset_build_cli.py  (+2 more)
(+387 files in other folders)
