[build-system]
requires = ["setuptools>=64", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[project]
name = "text-to-sign-production"
version = "0.1.0"
description = "Thesis-grade reproducible research scaffold for text-to-sign production."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "text-to-sign-production contributors" },
]
keywords = ["research", "sign-language", "reproducibility", "thesis"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=2.4.4,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "dvc>=3.60,<4",
  "mypy>=1.12,<2",
  "pip-audit>=2.8,<3",
  "pre-commit>=4.0,<5",
  "pytest>=8.3,<10",
  "pytest-cov>=5.0,<8",
  "ruff>=0.14,<0.16",
  "types-PyYAML",
]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.6,<10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.coverage.run]
branch = true
source = ["text_to_sign_production"]

[tool.coverage.report]
show_missing = true
skip_covered = false
